# platform-sigma

double_lwr_robot/config/: controllers.yaml  double_controllers.yaml
double_lwr_robot/launch/: double_arms.launch
effectors/barrett_hand/barrett_hand_common/barrett_hand_description/urdf/: bh280.urdf.xacro  ip_bh280.gazebo.xacro  ip_bh280.urdf.xacro
effectors/barrett_hand/barrett_hand_controllers/include/: barrett_hand_group_position_controller.h
effectors/barrett_hand/barrett_hand_controllers/src/: barrett_hand_group_position_controller.cpp
effectors/barrett_hand/barrett_hand_description/: package.xml
effectors/barrett_hand/barrett_hand_description/launch/: display_rviz.launch
effectors/barrett_hand/barrett_hand_description/mesh/: f3_prox.STL  finger.dae  finger.stl  finger_tip.dae  finger_tip.stl  fingerprint.dae  fingerprint.stl  knuckle.dae  knuckle.stl  knuckle_fixed.dae  knuckle_fixed.stl  montador.STL  palm_282.dae  palm_282.stl  sensor.STL
effectors/barrett_hand/barrett_hand_description/model/: barrett_hand.gazebo.xacro  barrett_hand.gazebo_with_mimic.xacro  barrett_hand.transmission.xacro  barrett_hand.xacro  barrett_hand_with_mimic.xacro  simple_barrett_hand.xacro
effectors/barrett_hand/barrett_hand_description/rviz/: config.rviz
effectors/shadow_hand/: README.md
effectors/shadow_hand/common_resources/sr_description_common/sensors/: kinect.urdf.xacro
effectors/shadow_hand/common_resources/sr_description_common/worlds/: shadowhand.world
effectors/shadow_hand/sr_common/sr_description/hand/xacro/palm/: palm.transmission.xacro
effectors/shadow_hand/sr_gui_joint_slider_bi_manual/sr_gui_joint_slider_lh/: CMakeLists.txt  package.xml  setup.py  sr_joint_slider_plugin_lh.xml
effectors/shadow_hand/sr_gui_joint_slider_bi_manual/sr_gui_joint_slider_rh/: CMakeLists.txt  package.xml  setup.py  sr_joint_slider_plugin_rh.xml
force-torque-sensor-master/launch/: FTsensor.launch
krl/: FRIControl.src
kuka_lwr_controllers/: CMakeLists.txt  kuka_lwr_controllers_plugins.xml  package.xml
kuka_lwr_controllers/include/: basic_torque_controller.h  cartesian_computed_torque_controller.h  gravity_compensation_controller.h  group_command_controller_fri.h  simple_cartesian_impedance_controller.h  torque_based_position.h  torque_based_position_gazebo.h
kuka_lwr_controllers/src/: basic_torque_controller.cpp  cartesian_computed_torque_controller.cpp  gravity_compensation_controller.cpp  group_command_controller_fri.cpp  node_test_irml.cpp  simple_cartesian_impedance_controller.cpp  torque_based_position.cpp  torque_based_position_gazebo.cpp
kuka_lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr_transmissions.xacro
kuka_lwr_gazebo/launch/: double_arms.launch
kuka_lwr_gazebo_plugin/: CMakeLists.txt
kuka_lwr_gazebo_plugin/src/: lwr_gazebo_plugin.cpp
kuka_lwr_hw/: CMakeLists.txt
kuka_lwr_hw/include/kuka_lwr_hw/: lwr_hw.h  lwr_hw_fril.hpp  lwr_hw_gazebo.h  lwr_kuka_cartesian_interface.h
kuka_lwr_hw/src/: lwr_hw.cpp  lwr_hw_gazebo.cpp
kuka_lwr_moveit/: .setup_assistant
kuka_lwr_moveit/config/: double_lwr_robot.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
kuka_lwr_moveit/launch/: demo.launch  double_lwr_robot_moveit_controller_manager.launch.xml  moveit.rviz
pan_tilt_com/lib_com/src/pan_tilt_com/: Drive.cpp  Drive.h  UdpTransport.cpp  UdpTransport.h
pan_tilt_controllers/: package.xml
pantilt_description/model/: pantilt_gazebo.urdf.xacro  pantilt_materials.xacro
platform_gazebo/: send_specific_position_grasp.sh  start_specific_position.sh
platform_gazebo/config/: bh_hw_interface.test  lbh_controller_gazebo.yaml  lh_controller_gazebo.yaml  lh_joint_state_controller.yaml  lkuka_controller_gazebo.yaml  lsh_controller_gazebo.yaml  lsh_joint_state_controller.yaml  rbh_controller_gazebo.yaml  rh_controller_gazebo.yaml  rh_joint_state_controller.yaml  rkuka_controller_gazebo.yaml  rsh_controller_gazebo.yaml  rsh_joint_state_controller.yaml
platform_gazebo/launch/: platform_gazebo.launch  platform_gazebo_with_hands.launch  platform_gazebo_with_shadow_hands.launch  test_platform_gazebo_with_hands.launch
platform_gazebo/robot/: lbh_barrett_hand.urdf.xacro  lh_shadow_hand.urdf.xacro  lsh_shadow_hand.urdf.xacro  platform_robot_shadow_hands.urdf.xacro  platform_robot_with_hands.urdf.xacro  rbh_barrett_hand.urdf.xacro  rh_shadow_hand.urdf.xacro  robot_shadow_hand.urdf.xacro  rsh_shadow_hand.urdf.xacro
platform_gazebo/robot/barrett_hand/: bh_gazebo.urdf.xacro
platform_gazebo/robot/sr/: gazebo.urdf.xacro  sr_gazebo.urdf.xacro
platform_gazebo/worlds/: shadow_hand_environment.world  table_coke_environment.world
rqt_plugins/: CMakeLists.txt  package.xml  plugin.xml
rqt_plugins/include/rqt_plugins/: qtplotchecked.h  qtpositionsliders.h  qtvelocitysliders.h  rqt_platform_sigma_controller_manager.h  rqt_platform_sigma_joint_position.h
rqt_plugins/src/: qtplotchecked.cpp  qtpositionsliders.cpp  qtvelocitysliders.cpp  rqt_platform_sigma_controller_manager.cpp  rqt_platform_sigma_joint_position.cpp
scripts_launcher/kuka_lwr/: lanceur_gravity_compensation_service.sh  lanceur_kuka_arms.sh  lanceur_kuka_arms_left.sh  lanceur_kuka_arms_right.sh  lanceur_pantilt_position_service.sh  lanceur_pantilt_see_all_services.sh  lanceur_pantilt_send_cartesian_position.sh  lanceur_pantilt_send_position_zero.sh  lanceur_position_service.sh  lanceur_send_init_position.sh  lanceur_send_position.sh
scripts_launcher/pantilt/: lanceur_pan_tilt.sh  lanceur_pan_tilt_init_position.sh  lanceur_pan_tilt_without_camera.sh  lanceur_pantilt_gravity_compensation_service.sh  lanceur_pantilt_inverse_kinematics_service.sh  lanceur_pantilt_rviz.sh  lanceur_pantilt_send_position.sh
scripts_net/hand/: net_hand_sigma.sh
scripts_net/kuka_lwr/: net_kuka_sigma.sh  net_user_kuka_sigma.sh
test_move_group/: CMakeLists.txt
test_move_group/launch/: test_cartesian_position.launch
test_move_group/src/: test_custom_cartesian_position.cpp
txt/: Readme.txt  memory_to_kinetic.txt  platform_simulations_readme.txt
txt/hand/: Readme_Using_Hand_From_User_Computer.txt
(+15 files in other folders)
